--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/TradingDashboard/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/TradingDashboard/logo192.png"/><link rel="manifest" href="/TradingDashboard/manifest.json"/><title>React App</title><script defer="defer" src="/TradingDashboard/static/js/main.cd0d75fc.js"></script><link href="/TradingDashboard/static/css/main.6e471c87.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import './index.css';
+import App from './App';
+import reportWebVitals from './reportWebVitals';
+
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
+  <React.StrictMode>
+    <App />
+  </React.StrictMode>
+);
+
+// If you want to start measuring performance in your app, pass a function
+// to log results (for example: reportWebVitals(console.log))
+// or send to an analytics endpoint. Learn more: https://bit.ly/CRA-vitals
+reportWebVitals();
