--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="manifest.json" />
     <title>React App</title>
     <script defer="defer" src="./static/js/main.cd0d75fc.js"></script>
-    <link href=".static/css/main.6e471c87.css" rel="stylesheet">
+    <link href="./static/css/main.6e471c87.css" rel="stylesheet">
 </head>
 
 <body>
